--- a/package.json
+++ b/package.json
@@ -18,20 +18,14 @@
     "test:watch": "vitest --watch",
     "test:cov": "vitest run --coverage"
   },
-  "dependencies": {
-    "@types/express": "^4.17.21",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1"
-  },
   "devDependencies": {
-    "@swc/core": "^1.7.18",
-    "@swc/helpers": "^0.5.12",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.21",
-    "express": "^4.19.2",
-    "ts-node": "^10.9.2",
+    "@types/node": "^22.5.4",
+    "tsx": "^4.19.0",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "@swc/core": "^1.7.18",
+    "@swc/helpers": "^0.5.12",
+    "ts-node": "^10.9.2"
   }
 }
